# idg_proj

./: .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
apps/: __init__.py
infra/: docker-compose.yml
reports/: complex_structure_v1.json  complex_structure_v1.md  complex_structure_v2.json  complex_structure_v2.md  complex_structure_v3.json  complex_structure_v3.md  flat_win_reduction_v2.json  flat_win_reduction_v2.md  frontier_checkpoint_report.json  frontier_checkpoint_report.md  frontier_checkpoint_smoke.json  frontier_checkpoint_smoke.md  frontier_checkpoint_state.json  frontier_debug_visible.json  frontier_debug_visible.md  frontier_lhs_150_full.json  frontier_lhs_150_full.md  frontier_mvp.ckpt.json  frontier_mvp.ckpt1.json  frontier_mvp.ckpt3.json  frontier_mvp_rigorous.json  frontier_mvp_rigorous.md  frontier_signal_fast.json  frontier_signal_fast.md  frontier_smoke_fast.json  frontier_smoke_fast.md  frontier_smoke_real.json  frontier_smoke_real.md  frontier_substantial_lt4h.json  frontier_substantial_lt4h.md  hybrid_report.json  hybrid_report.md  leaf_first_adaptive_rag.json  leaf_first_adaptive_rag.md  leaf_first_constrained_rag.json  leaf_first_constrained_rag.md  original.md  post_ablation_run.json  post_ablation_run.md  post_branch_focusing.json  (+28 more)
scripts/: bootstrap_uv.sh  export_ablation_report.sh  export_benchmark_report.sh  plot_frontier_results.py  run_frontier_sweep.sh  seed_benchmark_agents.sh  validate_postgres_stack.sh
tests/: conftest.py  test_ablation.py  test_batch_ingest.py  test_counterfactual.py  test_evals.py  (+8 more)
(+21 files in other folders)
