[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-b-memory-tree"
version = "0.1.0"
description = "Research-first hierarchical memory architecture for generative agents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "alembic>=1.13.0",
  "fastapi>=0.110.0",
  "pydantic>=2.6.0",
  "psycopg[binary]>=3.1.0",
  "pgvector>=0.2.0",
  "sqlalchemy>=2.0.0",
  "httpx>=0.27.0",
  "uvicorn>=0.27.0",
  "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
postgres = [
  "arq>=0.25.0",
]
worker = [
  "arq>=0.25.0",
]
train = [
  "torch>=2.2.0",
  "transformers>=4.38.0",
  "hydra-core>=1.3.0",
  "mlflow>=2.12.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "packages*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
